test/fail/suggest-label-ai.mo
//MOC-FLAG --ai-errors
label foo {
  break fo;
};
